# adios-multi-tenant-serving

./: Cargo.toml  README.md  adios-plugin.toml
src/: main.rs
src/integration/: adios_integration.rs
