[package]
name = "adios-multi-tenant-serving"
version = "0.1.0"
edition = "2021"
description = "AdiOS multi-tenant-serving plugin"
license = "MIT"
repository = "https://github.com/tridentbiz/adios-multi-tenant-serving"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# AdiOS ecosystem dependencies
[dependencies.adios-core]
path = "../../libs/adios-core"
version = "0.1.0"

[dev-dependencies]
tokio-test = "0.4"
